[tool.poetry]
name = "ibm-data-analyst-professional"
version = "0.1.0"
description = ""
authors = ["jorgemaciel <jorge.maciel.jr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.3"
jupyterlab = "^4.0.11"
matplotlib = "^3.8.2"
pycoingecko = "^3.1.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
